<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Calendar">

    <TextView
        android:id="@+id/checkTODOs"
        android:layout_marginTop="16dp"
        android:textSize="32sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/check_todos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/calendarItemsList"
        android:layout_width="236dp"
        android:layout_height="129dp"
        android:layout_marginTop="35dp"
        android:gravity="center"
        android:text="@string/calendar_items_size"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkTODOs" />

    <TextView
        android:id="@+id/listOfItems"
        android:layout_width="236dp"
        android:layout_height="129dp"
        android:layout_marginTop="35dp"
        android:gravity="center"
        android:text="@string/todo_list_CAPS"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calendarItemsList" />

    <Button
        android:id="@+id/goBack"
        android:layout_width="150dp"
        android:layout_height="70dp"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listOfItems"
        android:text="@string/go_back"
        />


</androidx.constraintlayout.widget.ConstraintLayout>