<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LandingPage">

    <TextView
        android:id="@+id/welcomeTitle"
        android:layout_width="192dp"
        android:layout_height="106dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/welcome"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/addBTN"
        android:layout_width="150dp"
        android:layout_height="70dp"
        android:layout_marginTop="200dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcomeTitle"
        android:text="@string/add"
        />

    <Button
        android:id="@+id/removeBTN"
        android:layout_width="150dp"
        android:layout_height="70dp"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addBTN"
        android:text="@string/remove"
        />

</androidx.constraintlayout.widget.ConstraintLayout>